# gennaro-dkg

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
src/: data.rs  error.rs  lib.rs  logger.rs  parameters.rs  participant.rs  pedersen_result.rs  protected.rs  refresh_participant.rs  round1.rs  round2.rs  round3.rs  round4.rs  round5.rs  secret_participant.rs  secret_share.rs  serdes.rs  traits.rs
src/participant/: round0.rs  round1.rs  round2.rs  round3.rs  round4.rs  round5.rs
src/refresh_participant/: round1.rs  round2.rs  round3.rs  round4.rs  round5.rs
src/secret_participant/: round1.rs  round2.rs  round3.rs  round4.rs  round5.rs
src/traits/: bls.rs  ed448.rs  k256.rs  tbls.rs  ted25519.rs  ted448.rs  tjubjub.rs  tk256.rs  tp256.rs  tp384.rs
tests/: happy_path.rs
