[package]
authors = ["Michael Lodder <redmike7@gmail.com>"]
categories = ["cryptography"]
description = "The Gennaro Distributed Key Generation Algorithm"
documentation = "https://docs.rs/gennaro-dkg"
edition = "2021"
homepage = "https://github.com/mikelodder7/gennaro-dkg"
keywords = ["key", "generation", "distributed", "gennaro"]
license = "Apache-2.0 OR MIT"
name = "gennaro-dkg"
readme = "README.md"
repository = "https://github.com/mikelodder7/gennaro-dkg"
version = "0.9.0-rc2"

[features]
default = ["curve25519"]
curve25519 = ["vsss-rs/curve25519"]


[dependencies]
anyhow = "1.0"
data-encoding = "2.5"
rand_core = { version = "0.6", features = ["std"] }
rand_chacha = "0.3"
thiserror = "1.0"
serde = "1.0"
serde_bare = "0.5"
soteria-rs = { version = "0.3", features = ["serde", "elements"] }
uint-zigzag = { version = "0.2.1", features = ["std"] }
vsss-rs = { version = "4.3.8", default-features = false, features = ["std"] }
zeroize = "1"

[dev-dependencies]
blsful = "2.5"
k256 = "0.13"
p256 = "0.13"
maplit = "1.0"
rstest = "0.18"
serde_bare = "0.5"
serde-encrypt = "0.7"
serde_json = "1.0"
