[package]
authors = ["Michael Lodder <redmike7@gmail.com>"]
categories = ["cryptography"]
description = "The Gennaro Distributed Key Generation Algorithm"
documentation = "https://docs.rs/gennaro-dkg"
edition = "2021"
homepage = "https://github.com/mikelodder7/gennaro-dkg"
keywords = ["key", "generation", "distributed", "gennaro"]
license = "Apache-2.0 OR MIT"
name = "gennaro-dkg"
readme = "README.md"
repository = "https://github.com/mikelodder7/gennaro-dkg"
version = "1.0.0-pre8"

[features]
default = ["bls", "curve25519", "jubjub", "ed448", "k256", "p256", "p384"]
bls = ["blsful", "sha2"]
curve25519 = ["vsss-rs/curve25519", "sha2", "curve25519-dalek-ml"]
ed448 = ["ed448-goldilocks-plus", "sha3"]
k256 = ["dep:k256", "sha2"]
p256 = ["dep:p256", "sha2"]
p384 = ["dep:p384", "sha2"]
jubjub = ["jubjub-plus", "sha2"]

[dependencies]
anyhow = "1.0"
elliptic-curve = { version = "0.13", features = ["hash2curve"] }
elliptic-curve-tools = { version = "0.1", features = ["std"] }
data-encoding = "2.6"
merlin = "3"
rand_core = { version = "0.6", features = ["std"] }
rand_chacha = "0.3"
thiserror = "1.0"
serde = "1.0"
postcard = { version = "1.0", features = ["use-std"]}
vsss-rs = { version = "5.0.0-rc0" }
zeroize = "1"

blsful = { version = "3.0.0-pre4", optional = true }
curve25519-dalek-ml = { version = "4.2", optional = true }
ed448-goldilocks-plus = { version = "0.12", optional = true }
jubjub-plus = { version = "0.10", optional = true }
k256 = { version = "0.13", features = ["arithmetic", "hash2curve", "bits"], optional = true }
p256 = { version = "0.13", features = ["arithmetic", "hash2curve", "bits"], optional = true }
p384 = { version = "0.13", features = ["arithmetic", "hash2curve", "bits"], optional = true }
sha2 = { version = "0.10", optional = true }
sha3 = { version = "0.10", optional = true }

[dev-dependencies]
blsful = "3.0.0-pre4"
ed448-goldilocks-plus = "0.12"
k256 = { version = "0.13", features = ["arithmetic"] }
p256 = { version = "0.13", features = ["arithmetic"] }
p384 = { version = "0.13", features = ["arithmetic"] }
rand_chacha = "0.3"
rand_core = "0.6"
rstest = "0.23"
serde_bare = "0.5"
serde-encrypt = "0.7"
serde_json = "1.0"
vsss-rs = { version = "5.0.0-rc0", features = ["curve25519"] }